--- a/AllerGen/places/mcdonalds/style.css
+++ b/AllerGen/places/mcdonalds/style.css
@@ -1,3 +1,26 @@
+#hamburger-menu {
+  display: flex;
+}
+#hamburger-submenu {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  border-radius: 20px;
+  padding-right: 10px;
+  padding-bottom: 50px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  text-decoration: none;
+}
+
+#hamburger-submenu li {
+  margin-right: 30px;
+  list-style: none;
+  font-weight: bold;
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
