--- a/AllerGen/saved/style1.css
+++ b/AllerGen/saved/style1.css
@@ -1,6 +1,20 @@
+body {
+  background-color: #f0f0f0;
+  margin: 20px;
+}
+
 #head {
   text-align: center;
   font-size: 30px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+h6 {
+  font-size: large;
 }
 
 #saved-restaurants {
@@ -39,7 +53,7 @@
   padding: 9px 8px 6px 8px;
   line-height: 1;
   border-radius: 4px;
-  color: goldenrod;
+  color: black;
   background-color: wheat;
 }
 
