--- a/saved/style1.css
+++ b/saved/style1.css
@@ -80,3 +80,11 @@ h6 {
   font-size: 20px;
   padding-bottom: 10px;
 }
+
+@media (max-width: 900px) {
+  .section-p1 {
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+  }
+}
